--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Update With Cait blog" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,36 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+    <title>Update With Cait</title>
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Update With Cait">
+    <meta itemprop="description" content="Update With Cait blog">
+    <meta itemprop="image" content="./favicons/CaitFav_180x180.png">
+  
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="">
+    <meta name="twitter:site" content="https://www.updatewithcait.com">
+    <meta name="twitter:title" content="Update With Cait">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:creator" content="Jeffrey VanHorn">
+  
+    <!-- Twitter summary card with large image must be at least 280x150px -->
+    <meta name="twitter:image:src" content="./favicons/CaitFav_512x512.png">
+  
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Update With Cait" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="https://www.updatewithcait.com" />
+    <meta property="og:image" content="./favicons/CaitFav_180x180.png" />
+    <meta property="og:description" content="Update With Cait blog" />
+    <meta property="og:site_name" content="Update With Cait" />
+  
+    <!-- Safari favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/CaitFav_180x180.png">
+  
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/CaitFav_32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/CaitFav_16x16.png">
 </head>
 
 <body>
